fix layout issue causing gap on mobile

--- a/themes/documentation/source/core/css/controls.css
+++ b/themes/documentation/source/core/css/controls.css
@@ -169,10 +169,10 @@ input[type=search]::-moz-placeholder { /* Firefox 18- */
         top: 8rem;
         left: 2rem;
 
-        max-width: 50rem;
-        width: 100%;
+        width: 95%;
+        max-width: 48rem;
 
-        padding: 0 2.5rem 0 0;
+        padding: 0 1.5rem 0 0;
     }
 
     .algolia-autocomplete {
@@ -186,6 +186,7 @@ input[type=search]::-moz-placeholder { /* Firefox 18- */
 
     input[type=search]:focus {
         width: 100%;
+        max-width: 48rem;
     }
 
 }
